--- a/client/index.html
+++ b/client/index.html
@@ -1,29 +1,29 @@
 <!doctype html>
 <!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
-<!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
-<!--[if IE 8 ]>    <html lang="en" class="no-js ie8"> <![endif]-->
-<!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
-
+<!--[if IE 7 ]> <html lang="en" class="no-js ie7"> <![endif]-->
+<!--[if IE 8 ]> <html lang="en" class="no-js ie8"> <![endif]-->
 <html lang="en" data-framework="marionettejs">
-	<head>
-		<meta charset="utf-8">
+<head>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>Loopback Backbone.Marionette Sample App</title>
+    <title>Loopback Backbone.Marionette Sample App</title>
     <meta name="description" content="loopback backbone marionette sample app">
     <meta name="author" content="michaellee">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="csrf-token" content="{{csrfToken}}">
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
-		<link rel="stylesheet" href="/bower_components/todomvc-common/base.css">
-		<link rel="stylesheet" href="/css/custom.css">
-	</head>
-	<body>
-    <nav id="navbar">
-    </nav>
+    <link rel="stylesheet" href="/bower_components/todomvc-common/base.css">
+    <link rel="stylesheet" href="/css/custom.css">
+</head>
+<body>
+    <!--[if lt IE 9]>
+        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a>.</p>
+    <![endif]-->
+    <section id="navbar">
+    </section>
     <section id="maincontent">
     </section>
-		<script src="/bower_components/todomvc-common/base.js"></script>
-		<script data-main="js/main" src="/bower_components/requirejs/require.js"></script>
-	</body>
+    <script src="/bower_components/todomvc-common/base.js"></script>
+    <script data-main="js/main" src="/bower_components/requirejs/require.js"></script>
+</body>
 </html>
